==> kendryte/canmv/components/micropython/port/src/standard_lib/network/esp32c3/esp_hosted_fg/src/spi_drv.c <==
#include "string.h"
#include "trace.h"
#include "spi_drv.h"
#include "adapter.h"
#include "serial_drv.h"
#include "netdev_if.h"
#include "platform_wrapper.h"
#include "fpioa.h"
#include "gpiohs.h"
#include "spi.h"
#include "sdcard.h"
#define TO_SLAVE_QUEUE_SIZE               30 //10
#define FROM_SLAVE_QUEUE_SIZE             30 //10
#define TRANSACTION_TASK_STACK_SIZE       4096
#define PROCESS_RX_TASK_STACK_SIZE        4096
#define SPI_TRANS_RATE					  (30*1000000)
#define MAX_PAYLOAD_SIZE (MAX_SPI_BUFFER_SIZE-sizeof(struct esp_payload_header))
#define ESP_DEBUG(format, ...) 	printf(format, ##__VA_ARGS__)
#define ESP_DEBUG(format, ...)  ;

static int init_netdev(void)
{
	void *ndev = NULL;
	int i = 0;
	struct esp_private *priv = NULL;
	char *if_name = STA_INTERFACE;
	uint8_t if_type = ESP_STA_IF;

	for (i = 0; i < MAX_NETWORK_INTERFACES; i++) {
		/* Alloc and init netdev */
		ndev = netdev_alloc(sizeof(struct esp_private), if_name);
		if (!ndev) {
			deinit_netdev();
			return ESP_FAIL;
		}

		priv = (struct esp_private *) netdev_get_priv(ndev);
		if (!priv) {
			deinit_netdev();
			return ESP_FAIL;
		}

		priv->netdev = ndev;
		priv->if_type = if_type;
		priv->if_num = 0;

		if (netdev_register(ndev, &esp_net_ops)) {
			deinit_netdev();
			return ESP_FAIL;
		}

		if_name = SOFTAP_INTERFACE;
		if_type = ESP_AP_IF;

		esp_priv[i] = priv;
	}

	return ESP_OK;
}

static void check_and_execute_spi_transaction(void)
{
	uint8_t * txbuff = NULL;
	uint8_t is_valid_tx_buf = 0;
	uint8_t gpio_handshake = GPIO_PV_LOW;
	uint8_t gpio_rx_data_ready = GPIO_PV_LOW;


	/* handshake line SET -> slave ready for next transaction */
	// gpio_handshake = HAL_GPIO_ReadPin(GPIO_HANDSHAKE_GPIO_Port,
	// 		GPIO_HANDSHAKE_Pin);
	gpio_handshake = gpiohs_get_pin(HANDSHAKE_GPIO);

	/* data ready line SET -> slave wants to send something */
	// gpio_rx_data_ready = HAL_GPIO_ReadPin(GPIO_DATA_READY_GPIO_Port,
	// 		GPIO_DATA_READY_Pin);
	gpio_rx_data_ready = gpiohs_get_pin(DATA_READY_GPIO);

	if (gpio_handshake == GPIO_PV_HIGH) {

		/* Get next tx buffer to be sent */
		txbuff = get_tx_buffer(&is_valid_tx_buf);

		if ( (gpio_rx_data_ready == GPIO_PV_HIGH) ||
		     (is_valid_tx_buf) ) {

			/* Execute transaction only if EITHER holds true-
			 * a. A valid tx buffer to be transmitted towards slave
			 * b. Slave wants to send something (Rx for host)
			 */
			xSemaphoreTake(mutex_spi_trans, portMAX_DELAY);
			spi_trans_func[hardware_type](txbuff);
			xSemaphoreGive(mutex_spi_trans);
		}
	}
}

stm_ret_t send_to_slave(uint8_t iface_type, uint8_t iface_num,
		uint8_t * wbuffer, uint16_t wlen)
{
	interface_buffer_handle_t buf_handle = {0};

	if (!wbuffer || !wlen || (wlen > MAX_PAYLOAD_SIZE)) {
		printf("write fail: buff(%p) 0? OR (0<len(%u)<=max_poss_len(%lu))?\n\r",
				wbuffer, wlen, MAX_PAYLOAD_SIZE);
		if(wbuffer) {
			free(wbuffer);
			wbuffer = NULL;
		}
		return ESP_FAIL;
	}
	memset(&buf_handle, 0, sizeof(buf_handle));

	buf_handle.if_type = iface_type;
	buf_handle.if_num = iface_num;
	buf_handle.payload_len = wlen;
	buf_handle.payload = wbuffer;
	buf_handle.priv_buffer_handle = wbuffer;
	buf_handle.free_buf_handle = free;

	if (pdTRUE != xQueueSend(to_slave_queue, &buf_handle, portMAX_DELAY)) {
		printf("Failed to send buffer to_slave_queue\n\r");
		if(wbuffer) {
			free(wbuffer);
			wbuffer = NULL;
		}
		return ESP_FAIL;
	}

	check_and_execute_spi_transaction();

	return ESP_OK;
}

static stm_ret_t spi_transaction_v2(uint8_t * txbuff)
{
	uint8_t *rxbuff = NULL;
	interface_buffer_handle_t buf_handle = {0};
	struct  esp_payload_header *payload_header;
	uint16_t len, offset;
	//HAL_StatusTypeDef retval = HAL_ERROR;
	uint16_t rx_checksum = 0, checksum = 0;

	/* Allocate rx buffer */
	rxbuff = (uint8_t *)malloc(MAX_SPI_BUFFER_SIZE);
	assert(rxbuff);
	memset(rxbuff, 0, MAX_SPI_BUFFER_SIZE);

	if(!txbuff) {
		/* Even though, there is nothing to send,
		 * valid reseted txbuff is needed for SPI driver
		 */
		txbuff = (uint8_t *)malloc(MAX_SPI_BUFFER_SIZE);
		assert(txbuff);
		memset(txbuff, 0, MAX_SPI_BUFFER_SIZE);
	}

	/* SPI transaction */
	// HAL_GPIO_WritePin(USR_SPI_CS_GPIO_Port, USR_SPI_CS_Pin, GPIO_PV_LOW);
	// retval = HAL_SPI_TransmitReceive(&hspi1, (uint8_t*)txbuff,
	// 		(uint8_t *)rxbuff, MAX_SPI_BUFFER_SIZE, HAL_MAX_DELAY);
	// while( hspi1.State == HAL_SPI_STATE_BUSY );
	// HAL_GPIO_WritePin(USR_SPI_CS_GPIO_Port, USR_SPI_CS_Pin, GPIO_PV_HIGH);

	set_spi_pin();
	//gpiohs_set_pin(ESP_SPI_CS_GPIO, GPIO_PV_LOW);
	spi_dup_send_receive_data_dma(DMAC_CHANNEL2, DMAC_CHANNEL1, SPI_DEVICE_1, SPI_CHIP_SELECT_0, 
									(uint8_t*)txbuff, MAX_SPI_BUFFER_SIZE, (uint8_t *)rxbuff, MAX_SPI_BUFFER_SIZE);
	//gpiohs_set_pin(ESP_SPI_CS_GPIO, GPIO_PV_HIGH);
	// switch(retval)
	// {
	// 	case HAL_OK:

			/* Transaction successful */

			/* create buffer rx handle, used for processing */
			payload_header = (struct esp_payload_header *) rxbuff;

			/* Fetch length and offset from payload header */
			len = le16toh(payload_header->len);
			offset = le16toh(payload_header->offset);
			ESP_DEBUG("spi_trans--payload_header->len:%d\r\n", len);
// print_hex_dump(rxbuff, 12+len, "SPI read data");

			if ((!len) ||
				(len > MAX_PAYLOAD_SIZE) ||
				(offset != sizeof(struct esp_payload_header))) {

				/* Free up buffer, as one of following -
				 * 1. no payload to process
				 * 2. input packet size > driver capacity
				 * 3. payload header size mismatch,
				 * wrong header/bit packing?
				 * */
				//ESP_DEBUG("spi_trans-- rxbuff:0x%x\r\n", rxbuff);
				if (rxbuff) {
					free(rxbuff);
					rxbuff = NULL;
				}
				/* Give chance to other tasks */
				//ESP_DEBUG("spi_trans--esp_msleep(0)\r\n");
				//esp_msleep(0); // remove this will speed up and stable for spi_transaction
			} else {
				rx_checksum = le16toh(payload_header->checksum);
				payload_header->checksum = 0;

				checksum = compute_checksum(rxbuff, len+offset);

				if (checksum == rx_checksum) {
					buf_handle.priv_buffer_handle = rxbuff;
					buf_handle.free_buf_handle = free;
					buf_handle.payload_len = len;
					buf_handle.if_type     = payload_header->if_type;
					buf_handle.if_num      = payload_header->if_num;
					buf_handle.payload     = rxbuff + offset;
					buf_handle.seq_num     = le16toh(payload_header->seq_num);
					buf_handle.flag        = payload_header->flags;

					if (pdTRUE != xQueueSend(from_slave_queue,
								&buf_handle, portMAX_DELAY)) {
						printf("Failed to send buffer\n\r");
						goto done;
					}
				} else {
					if (rxbuff) {
						free(rxbuff);
						rxbuff = NULL;
					}
				}
			}

			/* Free input TX buffer */
			if (txbuff) {
				free(txbuff);
				txbuff = NULL;
			}
	// 		break;

	// 	case HAL_TIMEOUT:
	// 		printf("timeout in SPI transaction\n\r");
	// 		goto done;
	// 		break;

	// 	case HAL_ERROR:
	// 		printf("Error in SPI transaction\n\r");
	// 		goto done;
	// 		break;
	// 	default:
	// 		printf("default handler: Error in SPI transaction\n\r");
	// 		goto done;
	// 		break;
	// }

	return ESP_OK;

done:
	/* error cases, abort */
	if (txbuff) {
		free(txbuff);
		txbuff = NULL;
	}

	if (rxbuff) {
		free(rxbuff);
		rxbuff = NULL;
	}
	return ESP_FAIL;
}

static void transaction_task(void const* pvParameters)
{
	if (hardware_type == HARDWARE_TYPE_ESP32) {
		printf("\n\rESP-Hosted for ESP32\n\r");
	} else if (hardware_type == HARDWARE_TYPE_OTHER_ESP_CHIPSETS) {
		printf("\n\rESP-Hosted for ESP32-C2/C3/S2/S3\n\r");
	} else {
		printf("Unsupported slave hardware\n\r");
		assert(hardware_type != HARDWARE_TYPE_INVALID);
	}

	for (;;) {
		if (osSemaphore != NULL) {
			/* Wait till slave is ready for next transaction */
			//if (osSemaphoreWait(osSemaphore , osWaitForever) == osOK) {
			if (xSemaphoreTake( osSemaphore, portMAX_DELAY) == pdTRUE){
				check_and_execute_spi_transaction();
			}
		}
		//esp_msleep(0);
	}
}

static void process_rx_task(void const* pvParameters)
{
	stm_ret_t ret = ESP_OK;
	interface_buffer_handle_t buf_handle = {0};
	uint8_t *payload = NULL;
	struct esp_pbuf *buffer = NULL;
	struct esp_priv_event *event = NULL;
	struct esp_private *priv = NULL;

	while (1) {
		// sys_check_timeouts();
		// esp_msleep(20);
		ret = xQueueReceive(from_slave_queue, &buf_handle, portMAX_DELAY);

		if (ret != pdTRUE) {
			printf("process_rx_task xQueueReceive no data\r\n");
			continue;
		}

		/* point to payload */
		payload = buf_handle.payload;
		ESP_DEBUG("process_rx_task--payload len:%d, if_type:%d\r\n", buf_handle.payload_len, buf_handle.if_type);
		/* process received buffer for all possible interface types */
		if (buf_handle.if_type == ESP_SERIAL_IF) {

			/* serial interface path */
			serial_rx_handler(&buf_handle);

		} else if((buf_handle.if_type == ESP_STA_IF) ||
				(buf_handle.if_type == ESP_AP_IF)) {
			priv = get_priv(buf_handle.if_type, buf_handle.if_num);

			if (priv) {
				buffer = (struct esp_pbuf *)malloc(sizeof(struct esp_pbuf));
				assert(buffer);

				buffer->len = buf_handle.payload_len;
				buffer->payload = malloc(buf_handle.payload_len);
				assert(buffer->payload);

				memcpy(buffer->payload, buf_handle.payload,
						buf_handle.payload_len);

				netdev_rx(priv->netdev, buffer); // 调用 sta_rx_cb, ap_rx_cb
			}

		} else if (buf_handle.if_type == ESP_PRIV_IF) {
			/* priv transaction received */

			event = (struct esp_priv_event *) (payload);
			ESP_DEBUG("process_rx_task event->event_type:%d\r\n", event->event_type);
			if (event->event_type == ESP_PRIV_EVENT_INIT) {
				/* halt spi transactions for some time,
				 * this is one time delay, to give breathing
				 * time to slave before spi trans start */
			} else {
				/* User can re-use this type of transaction */
			}
		}

		/* Free buffer handle */
		/* When buffer offloaded to other module, that module is
		 * responsible for freeing buffer. In case not offloaded or
		 * failed to offload, buffer should be freed here.
		 */
		if (buf_handle.free_buf_handle) {
			buf_handle.free_buf_handle(buf_handle.priv_buffer_handle);
		}
		
	}
}
